--- a/style.css
+++ b/style.css
@@ -3,9 +3,19 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif
 }
+html, body{
+    height: 100%;
+}
+body{
+    display: grid;
+    place-items: center;
+    min-height: 100vh;
+}
 .box{
     border: solid 1.5px;
     border-radius: 5px;
+    box-sizing: border-box;
+    font-size: calc(var(--tile-size) * 0.16);
 }
 .box p{
     padding-left: 5px;
