--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body{
     place-items: center;
     min-height: 100vh;
 }
+.container, .box, .box *{
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 .box{
     border: solid 1.5px;
     border-radius: 5px;
