--- a/grid.css
+++ b/grid.css
@@ -1,6 +1,7 @@
 .container{
-    margin: 0 auto;
+    margin: 0;
     display: grid;
+    overflow: hidden;
     --pad: clamp(12px, 3vw, 50px);
     padding: var(--pad);
     --tile-size: min(
